--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta content="" name="description">
 
         <!-- Google Web Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;500;600&family=Petit+Formal+Script&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;500;600&family=Petit+Formal+Script&display=swap" rel="stylesheet">  -->
 
         <!-- Icon Font Stylesheet -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
@@ -44,7 +44,7 @@
                 <div class="container px-0">
                     <nav class="navbar navbar-light navbar-expand-xl" id="navBar">
                         <a href="index.html" class="navbar-brand">
-                            <h4 class="text-primary display-6 fw-bold mb-0">Neetu<strong class="text-secondary">&</strong>Rajesh</h4>
+                            <h4 class="text-primary display-6 fw-bold mb-0">Neeta<strong class="text-secondary">&</strong>Rajesh</h4>
                         </a>
                         <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="fa fa-bars text-primary"></span>
@@ -84,7 +84,7 @@
                         <div class="carousel-caption">
                             <div class="p-3 mx-auto animated zoomIn" style="max-width: 900px;">
                                 <div class="d-inline-block border-end-0 border-start-0 border-secondary p-2 mb-4" style="border-style: double;">
-                                    <h4 class="text-white text-uppercase fw-bold mb-0" style="letter-spacing: 3px;">WE ARE CELEBRATING SILVER JUBLIE</h4>
+                                    <h4 class="text-white text-uppercase fw-bold mb-0" style="letter-spacing: 3px;">We Are CELEBRATING SILVER JUBLIE</h4>
                                 </div>
                                 <h1 class="display-1 text-capitalize text-white mb-3">Neeta <i class="fa fa-heart text-primary"></i> Rajesh</h1>
                                 <div class="d-inline-block border-end-0 border-start-0 border-secondary p-2 mb-5" style="border-style: double;">
@@ -99,7 +99,7 @@
                         <div class="carousel-caption">
                             <div class="p-3 mx-auto animated zoomIn" style="max-width: 900px;">
                                 <div class="d-inline-block border-end-0 border-start-0 border-secondary p-2 mb-5" style="border-style: double;">
-                                    <h4 class="text-white text-uppercase fw-bold mb-0" style="letter-spacing: 3px;">WE ARE CELEBRATING SILVER JUBLIE</h4>
+                                    <h4 class="text-white text-uppercase fw-bold mb-0" style="letter-spacing: 3px;">We Are CELEBRATING SILVER JUBLIE</h4>
                                 </div>
                                 <h1 class="display-1 text-capitalize text-white mb-3">Neeta <i class="fa fa-heart text-primary"></i> Rajesh</h1>
                                 <div class="d-inline-block border-end-0 border-start-0 border-secondary p-2 mb-4" style="border-style: double;">
@@ -366,10 +366,10 @@
                 <div class="wedding-date text-center bg-light p-5" style="border-style: double !important; border: 15px solid rgba(253, 93, 93, 0.5);">
                     <div class="wedding-date-content">
                         <div class="d-inline-block border-end-0 border-start-0 border-secondary p-2 mb-4" style="border-style: double;">
-                            <h4 class="text-dark text-uppercase fw-bold mb-0" style="letter-spacing: 3px;">March <strike>12</strike>13, 2024</h4>
+                            <h4 class="text-dark text-uppercase fw-bold mb-0" style="letter-spacing: 3px;">March <strike>12</strike> 13, 2024</h4>
                         </div>
-                        <h1 class="display-4">Exciting news ahead!!! We are thrilled to announce a double celebration - not only will we be marking the milestone of silver jublie , but we will also be celebrating the birthday of Atharva Kabra as he turns 24</h1>
-                        <!-- <p class="text-dark fs-5">Indore</p> -->
+                        <h1 class="display-4"></h1>
+                        <p class="text-dark fs-5">Exciting news ahead!!! We are thrilled to announce a double celebration - not only will we be marking the milestone of silver jublie , but we will also be celebrating the birthday of<br> Atharva Kabra as he turns 24</p>
                         <div class="d-flex align-items-center justify-content-center mb-5">
                             
                         </div>
@@ -408,7 +408,7 @@
                                     <i class="fas fa-menorah text-primary fa-3x"></i>
                                 </div>
                                 <p class="text-primary">7:00 PM</p>
-                                <h3 class="text-dark">Welcome Ceremony</h3>
+                                <h3 class="text-dark">Welcome !</h3>
                                 <!-- <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p> -->
                             </div>
                         </div>
@@ -417,8 +417,8 @@
                                 <div class="mb-4 p-3 d-inline-flex">
                                     <i class="fas fa-photo-video text-primary fa-3x"></i>
                                 </div>
-                                <p class="text-primary">07:30PM - 08:30AM</p>
-                                <h3 class="text-dark">Fun Activities</h3>
+                                <p class="text-primary">07:30PM </p>
+                                <h3 class="text-dark">Fun Activities and Dance</h3>
                                 <!-- <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p> -->
                             </div>
                         </div>
@@ -427,7 +427,7 @@
                                 <div class="mb-4 p-3 d-inline-flex">
                                     <i class="fas fa-dungeon text-primary fa-3x"></i>
                                 </div>
-                                <p class="text-primary">08:00AM - 08:30AM</p>
+                                <p class="text-primary">08:30PM</p>
                                 <h3 class="text-dark">Ring Ceremony and Cake Cutting</h3>
                                 <!-- <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p> -->
                             </div>
@@ -606,13 +606,15 @@
                     <h1 class="display-2 text-primary">RSVP Form</h1>
                 </div>
                 <div class="row justify-content-center">
+                    <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdguLRKJSb4QNfNP0z-L20EAnec76wtEXYsoyLHyr2C2jCpDA/viewform?embedded=true" width="640" height="881" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
+
                     <div class="col-md-10">
                         <div class="p-5 border-secondary position-relative" style="border-style: double;">
                             <div class="fw-bold text-primary bg-white d-flex align-items-center justify-content-center position-absolute border-secondary p-2 wow fadeIn" data-wow-delay="0.1s" style="width: 75%; border-style: double; top: 0; left: 50%; transform: translate(-50%, -50%);">
                                 Kindly respond by March 11, 2024 we look forward to celebrating with you!
                             </div>
                             <form>
-                                <div class="row gx-4 gy-3">
+                                <!-- <div class="row gx-4 gy-3">
                                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                                         <div class="form-group">
                                             <label for="Examplename" class="form-label text-dark">First Name</label>
@@ -625,7 +627,7 @@
                                             <input type="text" class="form-control py-3 border-0" id="Examplename" placeholder="Last Name">
                                           </div>
                                     </div>
-                                    <!-- <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                                         <div class="form-group">
                                             <label for="Examplename" class="form-label text-dark">Enter Your Email</label>
                                             <input type="email" class="form-control py-3 border-0" id="Examplename" placeholder="Enter Your Email">
@@ -636,7 +638,7 @@
                                             <label for="Examplename" class="form-label text-dark">Enter Your Phone</label>
                                             <input type="text" class="form-control py-3 border-0" id="Examplename" placeholder="Enter Your Phone">
                                           </div>
-                                    </div> -->
+                                    </div>
                                     <div class="col-12 wow fadeIn" data-wow-delay="0.1s">
                                         <div class="form-group">
                                             <label for="exampleselect" class="form-label text-dark">Number Of Guests</label>
@@ -653,7 +655,7 @@
                                             <label for="exampletextarea" class="form-label text-dark">Message</label>
                                             <textarea name="text" class="form-control border-0" id="exampletextarea" cols="30" rows="5" placeholder="Message"></textarea>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="col-12 wow fadeIn" data-wow-delay="0.1s">
                                         <div class="text-center border border-secondary p-4 my-4 position-relative">
                                             <div class="fw-bold text-primary bg-white d-flex align-items-center justify-content-center position-absolute border-secondary p-2" style="width: 50%; border-style: double; top: 0; left: 50%; transform: translate(-50%, -50%);">
@@ -686,8 +688,19 @@
                                         </div>
                                     </div>
                                     <div class="col-12 text-center wow fadeIn" data-wow-delay="0.1s">
-                                        <button class="btn btn-primary btn-primary-outline-0 py-3 px-5">Submit Now</button>
+                                        <button class="btn btn-primary btn-primary-outline-0 py-3 px-5">Courteous</button>
                                     </div>
+                                    <!-- <div class="col-012 text-center wow fadeIn" data-wow-delay="0.1s">
+                                        <button class="btn btn-primary btn-primary-outline-0 py-3 px-5">Tanisha Trisha</button>
+                                    </div>
+                                    <div class="col-12 text-center wow fadeIn" data-wow-delay="0.1s">
+                                        <button class="btn btn-primary btn-primary-outline-0 py-3 px-5">Sarthi Avesh</button>
+                                    </div> --><br>
+                                    <div id="boxshadow" class="col-12 text-center wow fadeIn" >
+                                        <h3>Atharva ,Anshika, Tanisha, Trisha, Sarthi, Avesh </h1>
+                                        <!-- <p>Its nice to meet you!</p> -->
+                                      </div>
+                                      
                                 </div>
                             </form>
                         </div>
